try fix logo on safari

--- a/2026/endowment-breakdown/static/css/main.css
+++ b/2026/endowment-breakdown/static/css/main.css
@@ -273,6 +273,8 @@ g.sankey {
 
     #title-logo {
         width: 100px;
+        max-width: 100px;
+        flex-shrink: 0;
     }
 
     /* text */
